# formulaAI

./: .env.example  .gitignore  README.md  docker-compose.yml
.devcontainer/: Dockerfile.agent-dev  Dockerfile.backend-dev  Dockerfile.dev  Dockerfile.langgraph-dev  devcontainer.json  docker-compose.dev.yml  post-create.sh
.omo/: boulder.json
.omo/plans/: formula-workbench-standalone.md  m3-redesign-plan.md
.omo/run-continuation/: ses_13057e317ffefMJ9t0nJm7yme7.json  ses_1305fb346ffelOuU6WmoHhKBNj.json  ses_130f44e89ffeCI9E88Vb6iNR8A.json  ses_130f45f00ffekrV4jtKWgjlSXs.json  ses_1314f169bffeBobd4J3L7p2Vvs.json  ses_1314f2fbcffeFqHaJ4LXF4JdZQ.json  ses_131b6f935ffeNSZdif51N278Ej.json  ses_131b7d813ffe41UrjHDXVTZ5tR.json  ses_131c91a47ffeLhRazls2yfjW4D.json  ses_131d10c3bffeeyvybu5Vsu0POi.json
agent-service/: Dockerfile
agent-service/src/: agent.py  main.py  sse_protocol.py
backend/: .air.toml  Dockerfile  Makefile  go.mod  go.sum
backend/migrations/: 001_create_formulas.down.sql  001_create_formulas.up.sql  002_create_formula_parts.down.sql  002_create_formula_parts.up.sql  003_create_formula_ingredients.down.sql  (+29 more)
compmat-service/: README.md
copilotkit-runtime/: .env.example  Dockerfile  package-lock.json  package.json  tsconfig.json
database/: Dockerfile  postgresql.conf
frontend/: Dockerfile  Dockerfile.dev  README.md  angular.json  nginx.conf  package-lock.json  package.json  proxy.conf.json
langgraph-service/: Dockerfile  pyproject.toml
langgraph-service/src/: agent.py  main.py  tools.py
mlai-service/: README.md
scripts/: e2e-test.sh
(+112 files in other folders)
